fix: add file's data validation